@@ -29,7 +29,7 @@ export const handler = define.handlers({
       }
 
       // Handle bot being removed from a channel
-      if(my_chat_member && my_chat_member.new_chat_member.status === "left") {
+      if(my_chat_member && my_chat_member.new_chat_member.status !== "administrator") {
         const [channel] = await db.delete(registered_channels).where(
           eq(registered_channels.channel_id , my_chat_member.chat.id.toString())
         ).returning();
